--- a/.prettierignore
+++ b/.prettierignore
@@ -5,6 +5,10 @@
 **/staticresources/**
 .localdevserver
 .sfdx
-.vscode
-
 coverage/
+.vscode
+docs/
+force-app/main/default/prompts/*.prompt-meta.xml
+# Exclude project config (edited by CI workflow)
+sfdx-project.json
+dependencies.json
