--- a/.prettierrc
+++ b/.prettierrc
@@ -1,13 +1,14 @@
 {
-  "trailingComma": "none",
-  "overrides": [
-    {
-      "files": "**/lwc/**/*.html",
-      "options": { "parser": "lwc" }
-    },
-    {
-      "files": "*.{cmp,page,component}",
-      "options": { "parser": "html" }
-    }
-  ]
+    "trailingComma": "none",
+    "singleQuote": true,
+    "tabWidth": 4,
+    "overrides": [
+        {
+            "files": ["force-app/**/**/classes/*.cls"]
+        },
+        {
+            "files": "force-app/**/**/lwc/**/*.html",
+            "options": { "parser": "lwc" }
+        }
+    ]
 }
