--- a/package.json
+++ b/package.json
@@ -1,43 +1,44 @@
 {
-  "name": "salesforce-app",
-  "private": true,
-  "version": "1.0.0",
-  "description": "Salesforce App",
-  "scripts": {
-    "lint": "npm run lint:lwc && npm run lint:aura",
-    "lint:aura": "eslint **/aura/**",
-    "lint:lwc": "eslint **/lwc/**",
-    "test": "npm run test:unit",
-    "test:unit": "sfdx-lwc-jest",
-    "test:unit:watch": "sfdx-lwc-jest --watch",
-    "test:unit:debug": "sfdx-lwc-jest --debug",
-    "test:unit:coverage": "sfdx-lwc-jest --coverage",
-    "prettier": "prettier --write \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
-    "prettier:verify": "prettier --list-different \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\""
-  },
-  "devDependencies": {
-    "@prettier/plugin-xml": "^0.12.0",
-    "@salesforce/eslint-config-lwc": "^0.11.0",
-    "@salesforce/eslint-plugin-aura": "^2.0.0",
-    "@salesforce/sfdx-lwc-jest": "^0.10.4",
-    "eslint": "^7.24.0",
-    "eslint-config-prettier": "^6.11.0",
-    "husky": "^4.2.1",
-    "lint-staged": "^10.0.7",
-    "prettier": "^2.0.5",
-    "prettier-plugin-apex": "^1.6.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
+    "name": "apex-recipes",
+    "private": true,
+    "version": "1.0.0",
+    "description": "A sample app demonstrating various aspects of the Apex programming language and the Salesforce Platform",
+    "scripts": {
+        "prettier": "prettier --write \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
+        "prettier:verify": "prettier --list-different \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
+        "prettier:apex:local": "npm run apex:local:start & sleep 2 && prettier --apex-standalone-parser built-in --write \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\" && npm run apex:local:stop",
+        "prettier:verify:apex:local": "prettier --apex-standalone-parser built-in --list-different \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
+        "apexdocs": "apexdocs-generate -c apexDocsConfig.json -o false -p global public private protected namespaceaccessible -s force-app/main/default/classes && rm docs/index.md",
+        "apex:local:start": "node node_modules/prettier-plugin-apex/bin/start-apex-server.js",
+        "apex:local:stop": "node node_modules/prettier-plugin-apex/bin/stop-apex-server.js",
+        "test:unit": "sfdx-lwc-jest --skipApiVersionCheck",
+        "test:unit:watch": "sfdx-lwc-jest --watch --skipApiVersionCheck",
+        "test:unit:debug": "sfdx-lwc-jest --debug --skipApiVersionCheck",
+        "test:unit:coverage": "sfdx-lwc-jest --coverage --skipApiVersionCheck",
+        "postinstall": "node bin/check-version.js && husky install",
+        "precommit": "npm run apex:local:start & sleep 2 && npm run apexdocs && npm run prettier:apex:local && npm run apex:local:stop"
+    },
+    "author": "salesforce.com",
+    "license": "CC0-1.0",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/trailheadapps/apex-recipes"
+    },
+    "engines": {
+        "node": ">= 10.13.0",
+        "npm": ">= 6.5.0"
+    },
+    "devDependencies": {
+        "@cparra/apexdocs": "^1.11.0",
+        "@prettier/plugin-xml": "^0.13.1",
+        "@sa11y/jest": "^0.3.0",
+        "@salesforce/eslint-config-lwc": "^0.11.0",
+        "@salesforce/sfdx-lwc-jest": "^0.10.4",
+        "eslint": "^7.22.0",
+        "eslint-config-prettier": "^8.1.0",
+        "husky": "^5.2.0",
+        "prettier": "^2.2.1",
+        "prettier-plugin-apex": "^1.8.0",
+        "semver": "^7.3.4"
     }
-  },
-  "lint-staged": {
-    "**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}": [
-      "prettier --write"
-    ],
-    "**/{aura|lwc}/**": [
-      "eslint"
-    ]
-  }
 }
