--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,5 +1,5 @@
 {
-    "orgName": "kpoorman company",
+    "orgName": "CanTheUser Company",
     "edition": "Developer",
     "features": ["EnableSetPasswordInApi"],
     "settings": {
