--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -3,7 +3,7 @@
         {
             "path": "force-app",
             "default": true,
-            "package": "CanTheuser",
+            "package": "CanTheUser",
             "versionName": "ver 0.1",
             "versionNumber": "0.1.0.NEXT"
         }
