--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -13,6 +13,7 @@
     "sfdcLoginUrl": "https://login.salesforce.com",
     "sourceApiVersion": "51.0",
     "packageAliases": {
-        "CanTheUser": "0Ho5e0000004CYICA2"
+        "CanTheUser": "0Ho5e0000004CYICA2",
+        "CanTheUser@0.1.0-1": "04t5e000000uiYbAAI"
     }
 }
