--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -14,6 +14,7 @@
     "sourceApiVersion": "51.0",
     "packageAliases": {
         "CanTheUser": "0Ho5e0000004CYICA2",
-        "CanTheUser@0.1.0-1": "04t5e000000uiYbAAI"
+        "CanTheUser@0.1.0-1": "04t5e000000uiYbAAI",
+        "CanTheUser@0.1.1-1": "04t5e000000uidDAAQ"
     }
 }
