--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -3,7 +3,7 @@ name: CI on PR
 
 # Definition when the workflow should run
 on:
-    pull_request:
+    pull_request_target:
         types: [opened, edited, synchronize, reopened]
         branches-ignore:
             - prerelease/spring[2-9][0-9]
