--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -15,6 +15,7 @@
     "packageAliases": {
         "CanTheUser": "0Ho5e0000004CYICA2",
         "CanTheUser@0.1.0-1": "04t5e000000uiYbAAI",
-        "CanTheUser@0.1.1-1": "04t5e000000uidDAAQ"
+        "CanTheUser@0.1.1-1": "04t5e000000uidDAAQ",
+        "CanTheUser@0.1.2-1": "04t5e000000up1pAAA"
     }
 }
