--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,7 @@
     "trailingComma": "none",
     "singleQuote": true,
     "tabWidth": 4,
+    "printWidth": 140,
     "overrides": [
         {
             "files": ["force-app/**/**/classes/*.cls"]
