--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "apex-recipes",
+    "name": "can-the-user",
     "private": true,
     "version": "1.0.0",
-    "description": "A sample app demonstrating various aspects of the Apex programming language and the Salesforce Platform",
+    "description": "A sample app demonstrating various aspects of security in the Apex programming language and the Salesforce Platform",
     "scripts": {
         "prettier": "prettier --write \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
         "prettier:verify": "prettier --list-different \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
@@ -29,8 +29,8 @@
     },
     "devDependencies": {
         "@cparra/apexdocs": "^1.13.6",
-        "@sa11y/jest": "^3.0.1",
         "@prettier/plugin-xml": "^1.1.0",
+        "@sa11y/jest": "^3.0.1",
         "@salesforce/eslint-config-lwc": "^0.11.0",
         "@salesforce/sfdx-lwc-jest": "^1.1.0",
         "eslint": "^7.32.0",
@@ -39,8 +39,5 @@
         "prettier": "^2.4.1",
         "prettier-plugin-apex": "^1.10.0",
         "semver": "^7.3.4"
-    },
-    "dependencies": {
-        "sfdx-cli": "^7.124.0"
     }
 }
