--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "can-the-user",
     "private": true,
     "version": "1.0.0",
-    "description": "A sample app demonstrating various aspects of security in the Apex programming language and the Salesforce Platform",
+    "description": "Can the user and Safely are libraries for verifying user CRUD and FLS permissions, as well as executing all DML in a safe, FLS and CRUD respecting way.",
     "scripts": {
         "prettier": "prettier --write \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
         "prettier:verify": "prettier --list-different \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
@@ -17,27 +17,27 @@
         "test:unit:coverage": "sfdx-lwc-jest --coverage --skipApiVersionCheck",
         "precommit": "npm run apex:local:start & sleep 2 && npm run apexdocs && npm run prettier:apex:local && npm run apex:local:stop"
     },
-    "author": "salesforce.com",
+    "url": "git+https://github.com/codefriar/cantheuser",
     "license": "CC0-1.0",
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/trailheadapps/apex-recipes"
+        "url": "git+https://github.com/codefriar/cantheuser"
     },
     "engines": {
         "node": ">= 10.13.0",
         "npm": ">= 6.5.0"
     },
     "devDependencies": {
-        "@cparra/apexdocs": "^1.14.0",
-        "@prettier/plugin-xml": "^1.2.0",
-        "@sa11y/jest": "^3.1.0",
-        "@salesforce/eslint-config-lwc": "^0.11.0",
-        "@salesforce/sfdx-lwc-jest": "^1.1.0",
+        "@cparra/apexdocs": "^2.5.1",
+        "@prettier/plugin-xml": "^2.2.0",
         "eslint": "^7.32.0",
-        "eslint-config-prettier": "^8.1.0",
-        "husky": "^7.0.4",
-        "prettier": "^2.5.1",
+        "eslint-config-prettier": "^8.5.0",
+        "husky": "^8.0.1",
+        "prettier": "^2.7.1",
         "prettier-plugin-apex": "^1.10.0",
-        "semver": "^7.3.4"
+        "semver": "^7.3.7"
+    },
+    "dependencies": {
+        "sfdx-cli": "^7.159.0"
     }
 }
