--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "precommit": "npm run apex:local:start & sleep 2 && npm run apexdocs && npm run prettier:apex:local && npm run apex:local:stop"
     },
     "url": "git+https://github.com/codefriar/cantheuser",
+    "author": "Kevin Poorman",
     "license": "CC0-1.0",
     "repository": {
         "type": "git",
